sre-cloud-project/apps/app1/k8s/istio-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: app1
spec:
  hosts:
  - app1
  http:
  - route:
    - destination:
        host: app1
        port:
          number: 80
